# FittingGroundSurface

./: CMakeLists.txt  Readme.md
include/: ConvertFunction.hpp  FilterFunction.hpp  GroundFittingManager.h  header.h
src/: ConvertFunction.cpp  FilterFunction.cpp  GroundFittingManager.cpp  main.cpp
